salesforce-metadata/objects/Plan_Tier__c/Plan_Tier__c.object-meta.xml
<CustomObject>
    <label>Plan Tier</label>
    <pluralLabel>Plan Tiers</pluralLabel>
    <nameField>
        <label>Tier Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>