salesforce-metadata/objects/Plan_Tier__c/fields/Attainment_Ceiling__c.field-meta.xml
<CustomField>
    <fullName>Attainment_Ceiling__c</fullName>
    <label>Attainment Ceiling</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Upper bound of attainment for this tier. Leave blank for uncapped.</description>
</CustomField>