salesforce-metadata/objects/Plan_Tier__c/fields/Attainment_Floor__c.field-meta.xml
<CustomField>
    <fullName>Attainment_Floor__c</fullName>
    <label>Attainment Floor</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>0</scale>
    <required>true</required>
    <description>Lower bound of attainment for this tier (e.g., 0%, 100%, 125%)</description>
</CustomField>