salesforce-metadata/objects/Plan_Tier__c/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <label>Commission Rate</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <required>true</required>
    <description>Commission rate for this tier (e.g., 10%, 15%, 20%)</description>
</CustomField>