salesforce-metadata/objects/Plan_Tier__c/fields/Comp_Plan__c.field-meta.xml
<CustomField>
    <fullName>Comp_Plan__c</fullName>
    <label>Comp Plan</label>
    <type>MasterDetail</type>
    <referenceTo>Comp_Plan__c</referenceTo>
    <relationshipLabel>Plan Tiers</relationshipLabel>
    <relationshipName>Plan_Tiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>