salesforce-metadata/objects/Plan_Tier__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
    <description>Display order for the tier</description>
</CustomField>